# zippy

./: .gitignore  Cargo.toml  LICENSE  README.md
tauri-plugin-zippy/: Cargo.toml  build.rs
tauri-plugin-zippy/src/: lib.rs
zippy-core/: Cargo.toml
zippy-core/src/: lib.rs
