[package]
name = "tauri-plugin-zippy"
version.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true
description.workspace = true
links = "tauri-plugin-zippy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.1", features = ["build"] }

[dependencies]
tauri-plugin = { version = "2.0.0-beta.1" }
tauri = { version = "^2.0.0-beta.2" }

zippy-core = { path = "../zippy-core" }